istio-config/deny-external-access-auth.yaml
# Not apply this one
# this will blocck all access explictly

apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  action: DENY
  rules:
  - {}
    # - from:
    #   - source:
    #       principals: ["*"]
