istio-config/frontend-to-backend.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: default
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: backend
  rules:
    - from:
      - source:
          principals: 
            - "cluster.local/ns/default/sa/frontend-sa"
            - "cluster.local/ns/istio-system/sa/istio-ingress"
